# kdev-dlang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dhighlighting.h  dlangparsejob.cpp  dlangparsejob.h  dubbuilder.categories  dubbuilder.kdev4  dubmanager.categories  dubmanager.kdev4  kdev-debug.sh  kdev.sh  kdevdlangplugin.cpp  kdevdubmanager.categories
assets/icons/: generate.sh
codecompletion/: model.h
dfmt/: CMakeLists.txt  dfmt.categories  dfmt.kdev4
dfmt/src/: CMakeLists.txt  dfmt_plugin.cpp  dfmt_plugin.h  dfmt_preferences.cpp  dfmt_preferences.h  dfmt_preferences.ui  dformatter.h  kdevdfmt_plugin.json
dlang/: .gitignore  CMakeLists.txt  ddebug.cpp  ddebug.h  dhighlighting.cpp  dlangparsejob.cpp  dlangparsejob.h  kdevdlang.json  kdevdlangplugin.cpp  kdevdlangplugin.h
dlang/codecompletion/: context.cpp  context.h  dcompletionexport.h  model.cpp  model.h  worker.cpp  worker.h
dlang/codecompletion/items/: completionitem.cpp  completionitem.h  functionitem.cpp  functionitem.h  importcompletionitem.cpp  importcompletionitem.h
dlang/duchain/: CMakeLists.txt  dduchainexport.h  helper.cpp  helper.h  navigationcontext.cpp  navigationcontext.h  navigationwidget.cpp  navigationwidget.h
dlang/duchain/builders/: contextbuilder.cpp  contextbuilder.h  dclassfunctiondeclaration.cpp  dclassfunctiondeclaration.h  ddeclaration.cpp  ddeclaration.h  declarationbuilder.cpp  declarationbuilder.h  dintegraltype.cpp  dintegraltype.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
dlang/parser/: CMakeLists.txt  build.sh  cppwrappergenerator.d  debug.cpp  debug.h  parsesession.cpp  parsesession.h
dlang/parser/src/: dparse.d
dscanner/: CMakeLists.txt  dscanner.categories  dscanner.kdev4
dscanner/src/: CMakeLists.txt  job.cpp  kdevdscanner.qrc  kdevdscanner.rc  kdevdscanner_plugin.json  parameters.cpp  parameters.h
dscanner/src/config/: globalconfigpage.h  globalconfigpage.ui  globalsettings.kcfgc  projectconfigpage.cpp  projectconfigpage.h
dubbuilder/: CMakeLists.txt  kdevdubbuilder.categories
dubbuilder/src/: dubbuilder.cpp  dubbuilder.h  dubjob.cpp  dubjob.h
dubmanager/: CMakeLists.txt  kdevdubmanager.categories
dubmanager/libsdlang/: CMakeLists.txt  sdlang.c  sdlang.h  sdlang.rl
dubmanager/src/: CMakeLists.txt  dcompilerfilterstrategy.cpp  dcompilerfilterstrategy.h  dubbuilder.cpp  dubbuilder.h  dubjob.cpp  dubjob.h  dubmanager.cpp  dubmanager.h  dubparser.cpp  dubparser.h  dubpreferences.cpp  dubpreferences.h  dubpreferences.ui  dubsettings.cpp  dubsettings.h  kdevdubmanager.json
duchain/: CMakeLists.txt
duchain/builders/: contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  usebuilder.cpp  usebuilder.h
icons/: CMakeLists.txt
parser/: build.sh  cppwrappergenerator.d  parsesession.cpp  parsesession.h
parser/src/: dparse.d
src/: CMakeLists.txt  dfmt.cpp  dfmt.h  dfmt.json  dfmt_plugin.cpp  dfmt_plugin.h  dfmt_preferences.cpp  dfmt_preferences.h  dfmt_preferences.ui  dformatter.cpp  dformatter.h  dproblemmodel.cpp  dproblemmodel.h  dscanner.cpp  dscanner.h  dscanner.json  dscanner_plugin.cpp  dscanner_plugin.h  dubbuilder.cpp  dubbuilder.h  dubbuilder.json  dubjob.cpp  dubmanager.cpp  dubmanager.h  dubmanager.json  idubbuilder.h  job.cpp  job.h  kdevdubbuilder.json  kdevdubmanager.json  parameters.cpp  parameters.h  parser.cpp  parser.h  utils.cpp  utils.h
src/config/: globalconfigpage.cpp  globalsettings.kcfg  projectconfigpage.ui  projectsettings.kcfg  projectsettings.kcfgc
templates/: CMakeLists.txt
templates/dlang_dub_json/: %{PROJECTDIRNAME}.kdev4  dlang_dub_json.kdevtemplate
templates/dlang_dub_sdl/: dlang_dub_sdl.kdevtemplate
templates/dlang_file_empty/: dlang_file_empty.desktop  module.d
templates/dub_json/: dlang_json.kdevtemplate  dub.json
templates/dub_sdl/: .gitignore  dlang_sdl.kdevtemplate  dub.sdl
